# floor-it

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.gradle.kts  package-lock.json  pyproject.toml  settings.gradle.kts
Reports/: 1.29.25.txt
backend/: .flake8  Makefile  README.md  pyproject.toml  setup.cfg
backend/backend/: test_category_creator.py
backend/src/: main.py
backend/src/models/: IconDTO.py  ak_operator_dto.py  brand_icon_dto.py  category_data_dto.py  category_preview_dto.py  champion_dto.py  default_dto.py  model.py  numbers_dto.py  text_dto.py
backend/src/resources/static/: antoyoms.txt  barbie.txt  bjj.txt  brand-icons.json  car_model_to_brand.txt  cse403_finals.txt  disney.txt  food_drink.txt  house_of_dragons.txt  moviesTVshows.txt  multiplication.txt  numbers.txt  pokemon_kanto.json  songs_and_artists.txt  synonyms.txt  you.txt
backend/src/scripts/: 2024_top_spotify_songs.py  ak_operators.py  antonyms.py  antoyoms.py  barbie.py  brand_icons.py  default.py  disney.py  generate_categories.py  house_of_dragons.py  lol_champions.py  numbers.py  pokemon_kanto.py  songs_and_artists.py  synonyms.py  taylor_swift.py  test_numbers.py  text_categories.py  you.py
backend/src/utils/: category.py  category_creator.py  category_mapper.py  default.py  definitions.py  download_kaggle_dataset.py  generate_aliases.py  parse_file.py  text_category.py
backend/tests/scripts/: brand_icons_test.py  lol_champions_test.py
backend/tests/utils/: category_mapper.py  category_mapper_test.py  category_test.py  test_category_creator.py
(+230 files in other folders)
